--- a/04-tareas-hacer/package.json
+++ b/04-tareas-hacer/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@inquirer/prompts": "^8.1.0",
     "colors": "^1.4.0",
     "inquirer": "^13.1.0"
   }
