--- a/04-tareas-hacer/package.json
+++ b/04-tareas-hacer/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@inquirer/prompts": "^8.1.0",
     "colors": "^1.4.0",
-    "inquirer": "^13.1.0"
+    "inquirer": "^8.2.7",
+    "uuid": "^8.3.2"
   }
 }
