--- a/05-clima-app/.env
+++ b/05-clima-app/.env
@@ -1,2 +1,2 @@
-LOCATIONIQ_KEY=tu key de locationiq
-OPENWEATHER_KEY=tu key de openweather
+LOCATIONIQ_KEY=pk.8e8bd4323747f6525b58101a798f2a73
+OPENWEATHER_KEY=24bbc43dc14c7b8d5d7d0ce79486bdf6
