--- a/07-restserver-old/package.json
+++ b/07-restserver-old/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "mongoose": "^9.1.4"
+    "express": "^5.2.1"
   }
 }
