--- a/07-restserver/package.json
+++ b/07-restserver/package.json
@@ -14,9 +14,11 @@
     "nodemon": "^3.1.11"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-validator": "^7.3.1",
     "mongoose": "^9.1.4"
   }
 }
