--- a/10-socket-chat/package.json
+++ b/10-socket-chat/package.json
@@ -24,6 +24,7 @@
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
+    "socket.io": "^4.8.3",
     "uuid": "^8.3.2"
   }
 }
